<resources>
    <string name="app_name">CookBookApp</string>
    <string name="title_categories">Категории</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_recipe">Рецепт</string>
    <string name="title_ingredients">Ингредиенты</string>
    <string name="title_method">Способ приготовления</string>
    <string name="img_category_header">Общая обложка каталога</string>
    <string name="img_card_category">Фото категории</string>
    <string name="img_favorites">Фото избранное</string>
    <string name="img_recipe">Фото рецепта</string>
    <string name="img_button_heart">Добавить в избранное</string>
    <string name="string_portions">Порции:</string>
    <string name="stub_favorites">Вы еще не добавили ни одного рецепта в избранное</string>
    <string name="quantity_unit_of_measure">%1$s %2$s</string>
    <string name="string_method">%1$d. %2$s</string>
</resources>